# render-anim

./: default.nix  flake.nix  pack.nix  pyproject.toml  python_shell.nix  shell.nix
anim/: __init__.py  generate_imgs.py
anim/module/: __init__.py
tests/: t_export_frames.py  test_sample.py
