[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "anim"
description = "My package description"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.scripts]
my-script = "example_name.module:function"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
